--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.6",
     "d3-ease": "^3.0.1",
-    "react": "^19.1.0",
+    "react": "^18.0.0",
+    "react-animate-on-scroll": "^2.1.9",
+    "react-awesome-reveal": "^4.3.1",
     "react-circular-progressbar": "^2.2.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.0.0",
     "react-move": "^6.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "^5.0.1",
